Fix hero on mobile

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -5,7 +5,7 @@
 .hero {
 	display: flex;
 	position: relative;
-	min-height: 100vh;
+	min-height: 100dvh;
 	color: var(--c-darkblue);
 	font-family: var(--ff-sans-serif);
 	overflow: hidden;
